--- a/Subjot/iPhone/en.lproj/MainWindow_iPhone.xib
+++ b/Subjot/iPhone/en.lproj/MainWindow_iPhone.xib
@@ -19,6 +19,9 @@
 			<string>IBUITabBarController</string>
 			<string>IBUIWindow</string>
 			<string>IBUITabBar</string>
+			<string>IBUINavigationController</string>
+			<string>IBUINavigationBar</string>
+			<string>IBUINavigationItem</string>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -61,7 +64,7 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 				<bool key="IBUIResizesToFullScreen">YES</bool>
 			</object>
-			<object class="IBUITabBarController" id="653226401">
+			<object class="IBUITabBarController" id="385332277">
 				<object class="IBUISimulatedTabBarMetrics" key="IBUISimulatedBottomBarMetrics"/>
 				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
 				<object class="IBUISimulatedOrientationMetrics" key="IBUISimulatedOrientationMetrics">
@@ -70,9 +73,9 @@
 				</object>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 				<bool key="IBUIHorizontal">NO</bool>
-				<object class="IBUIViewController" key="IBUISelectedViewController" id="202742629">
+				<object class="IBUINavigationController" key="IBUISelectedViewController" id="21028043">
 					<string key="IBUITitle">Explore</string>
-					<object class="IBUITabBarItem" key="IBUITabBarItem" id="663516759">
+					<object class="IBUITabBarItem" key="IBUITabBarItem" id="812033856">
 						<string key="IBUITitle">Explore</string>
 						<object class="NSCustomResource" key="IBUIImage">
 							<string key="NSClassName">NSImage</string>
@@ -80,20 +83,48 @@
 						</object>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
-					<reference key="IBUIParentViewController" ref="653226401"/>
+					<reference key="IBUIParentViewController" ref="385332277"/>
 					<string key="IBUINibName">ExploreView</string>
+					<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
 					<object class="IBUISimulatedOrientationMetrics" key="IBUISimulatedOrientationMetrics">
 						<int key="IBUIInterfaceOrientation">1</int>
 						<int key="interfaceOrientation">1</int>
 					</object>
 					<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					<bool key="IBUIHorizontal">NO</bool>
+					<object class="IBUINavigationBar" key="IBUINavigationBar" id="39402345">
+						<nil key="NSNextResponder"/>
+						<int key="NSvFlags">256</int>
+						<string key="NSFrameSize">{0, 0}</string>
+						<bool key="IBUIOpaque">NO</bool>
+						<bool key="IBUIClipsSubviews">YES</bool>
+						<bool key="IBUIMultipleTouchEnabled">YES</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+					</object>
+					<object class="NSMutableArray" key="IBUIViewControllers">
+						<bool key="EncodedWithXMLCoder">YES</bool>
+						<object class="IBUIViewController" id="661791279">
+							<string key="IBUITitle">Explore</string>
+							<object class="IBUINavigationItem" key="IBUINavigationItem" id="281441272">
+								<string key="IBUITitle">Root View Controller</string>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+							</object>
+							<reference key="IBUIParentViewController" ref="21028043"/>
+							<string key="IBUINibName">ExploreView</string>
+							<object class="IBUISimulatedOrientationMetrics" key="IBUISimulatedOrientationMetrics">
+								<int key="IBUIInterfaceOrientation">1</int>
+								<int key="interfaceOrientation">1</int>
+							</object>
+							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+							<bool key="IBUIHorizontal">NO</bool>
+						</object>
+					</object>
 				</object>
 				<object class="NSMutableArray" key="IBUIViewControllers">
 					<bool key="EncodedWithXMLCoder">YES</bool>
-					<object class="IBUIViewController" id="1005915878">
+					<object class="IBUIViewController" id="154633913">
 						<string key="IBUITitle">Home Stream</string>
-						<object class="IBUITabBarItem" key="IBUITabBarItem" id="26363298">
+						<object class="IBUITabBarItem" key="IBUITabBarItem" id="754181806">
 							<string key="IBUITitle">Stream</string>
 							<object class="NSCustomResource" key="IBUIImage">
 								<string key="NSClassName">NSImage</string>
@@ -101,7 +132,7 @@
 							</object>
 							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						</object>
-						<reference key="IBUIParentViewController" ref="653226401"/>
+						<reference key="IBUIParentViewController" ref="385332277"/>
 						<string key="IBUINibName">HomeStream</string>
 						<object class="IBUISimulatedOrientationMetrics" key="IBUISimulatedOrientationMetrics">
 							<int key="IBUIInterfaceOrientation">1</int>
@@ -110,9 +141,9 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<bool key="IBUIHorizontal">NO</bool>
 					</object>
-					<reference ref="202742629"/>
-					<object class="IBUIViewController" id="286958240">
-						<object class="IBUITabBarItem" key="IBUITabBarItem" id="885752798">
+					<reference ref="21028043"/>
+					<object class="IBUIViewController" id="105282409">
+						<object class="IBUITabBarItem" key="IBUITabBarItem" id="247994018">
 							<string key="IBUITitle">Notifications</string>
 							<object class="NSCustomResource" key="IBUIImage">
 								<string key="NSClassName">NSImage</string>
@@ -120,7 +151,7 @@
 							</object>
 							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						</object>
-						<reference key="IBUIParentViewController" ref="653226401"/>
+						<reference key="IBUIParentViewController" ref="385332277"/>
 						<object class="IBUISimulatedOrientationMetrics" key="IBUISimulatedOrientationMetrics">
 							<int key="IBUIInterfaceOrientation">1</int>
 							<int key="interfaceOrientation">1</int>
@@ -128,8 +159,8 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<bool key="IBUIHorizontal">NO</bool>
 					</object>
-					<object class="IBUIViewController" id="688265194">
-						<object class="IBUITabBarItem" key="IBUITabBarItem" id="202384505">
+					<object class="IBUIViewController" id="556759317">
+						<object class="IBUITabBarItem" key="IBUITabBarItem" id="514485006">
 							<string key="IBUITitle">Settings</string>
 							<object class="NSCustomResource" key="IBUIImage">
 								<string key="NSClassName">NSImage</string>
@@ -137,7 +168,7 @@
 							</object>
 							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						</object>
-						<reference key="IBUIParentViewController" ref="653226401"/>
+						<reference key="IBUIParentViewController" ref="385332277"/>
 						<object class="IBUISimulatedOrientationMetrics" key="IBUISimulatedOrientationMetrics">
 							<int key="IBUIInterfaceOrientation">1</int>
 							<int key="interfaceOrientation">1</int>
@@ -146,7 +177,7 @@
 						<bool key="IBUIHorizontal">NO</bool>
 					</object>
 				</object>
-				<object class="IBUITabBar" key="IBUITabBar" id="248167938">
+				<object class="IBUITabBar" key="IBUITabBar" id="100809478">
 					<reference key="NSNextResponder"/>
 					<int key="NSvFlags">266</int>
 					<string key="NSFrame">{{0, 431}, {320, 49}}</string>
@@ -183,7 +214,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">rootViewController</string>
 						<reference key="source" ref="380026005"/>
-						<reference key="destination" ref="653226401"/>
+						<reference key="destination" ref="385332277"/>
 					</object>
 					<int key="connectionID">18</int>
 				</object>
@@ -224,77 +255,99 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">12</int>
-						<reference key="object" ref="653226401"/>
+						<reference key="object" ref="385332277"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="248167938"/>
-							<reference ref="1005915878"/>
-							<reference ref="286958240"/>
-							<reference ref="202742629"/>
-							<reference ref="688265194"/>
+							<reference ref="100809478"/>
+							<reference ref="154633913"/>
+							<reference ref="105282409"/>
+							<reference ref="556759317"/>
+							<reference ref="21028043"/>
 						</object>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">13</int>
-						<reference key="object" ref="248167938"/>
-						<reference key="parent" ref="653226401"/>
+						<reference key="object" ref="100809478"/>
+						<reference key="parent" ref="385332277"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">14</int>
-						<reference key="object" ref="1005915878"/>
+						<reference key="object" ref="154633913"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="26363298"/>
+							<reference ref="754181806"/>
 						</object>
-						<reference key="parent" ref="653226401"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">15</int>
-						<reference key="object" ref="202742629"/>
-						<object class="NSMutableArray" key="children">
-							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="663516759"/>
-						</object>
-						<reference key="parent" ref="653226401"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">16</int>
-						<reference key="object" ref="663516759"/>
-						<reference key="parent" ref="202742629"/>
+						<reference key="parent" ref="385332277"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">17</int>
-						<reference key="object" ref="26363298"/>
-						<reference key="parent" ref="1005915878"/>
+						<reference key="object" ref="754181806"/>
+						<reference key="parent" ref="154633913"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">19</int>
-						<reference key="object" ref="286958240"/>
+						<reference key="object" ref="105282409"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="885752798"/>
+							<reference ref="247994018"/>
 						</object>
-						<reference key="parent" ref="653226401"/>
+						<reference key="parent" ref="385332277"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">20</int>
-						<reference key="object" ref="885752798"/>
-						<reference key="parent" ref="286958240"/>
+						<reference key="object" ref="247994018"/>
+						<reference key="parent" ref="105282409"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">21</int>
-						<reference key="object" ref="688265194"/>
+						<reference key="object" ref="556759317"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="202384505"/>
+							<reference ref="514485006"/>
 						</object>
-						<reference key="parent" ref="653226401"/>
+						<reference key="parent" ref="385332277"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">22</int>
-						<reference key="object" ref="202384505"/>
-						<reference key="parent" ref="688265194"/>
+						<reference key="object" ref="514485006"/>
+						<reference key="parent" ref="556759317"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">25</int>
+						<reference key="object" ref="21028043"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="661791279"/>
+							<reference ref="39402345"/>
+							<reference ref="812033856"/>
+						</object>
+						<reference key="parent" ref="385332277"/>
+						<string key="objectName">Navigation Controller - Explore</string>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">27</int>
+						<reference key="object" ref="661791279"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="281441272"/>
+						</object>
+						<reference key="parent" ref="21028043"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">26</int>
+						<reference key="object" ref="39402345"/>
+						<reference key="parent" ref="21028043"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">28</int>
+						<reference key="object" ref="281441272"/>
+						<reference key="parent" ref="661791279"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">29</int>
+						<reference key="object" ref="812033856"/>
+						<reference key="parent" ref="21028043"/>
 					</object>
 				</object>
 			</object>
@@ -308,14 +361,16 @@
 					<string>13.IBPluginDependency</string>
 					<string>14.CustomClassName</string>
 					<string>14.IBPluginDependency</string>
-					<string>15.CustomClassName</string>
-					<string>15.IBPluginDependency</string>
 					<string>19.IBPluginDependency</string>
 					<string>2.IBAttributePlaceholdersKey</string>
 					<string>2.IBEditorWindowLastContentRect</string>
 					<string>2.IBPluginDependency</string>
 					<string>2.UIWindow.visibleAtLaunch</string>
 					<string>21.IBPluginDependency</string>
+					<string>25.IBPluginDependency</string>
+					<string>26.IBPluginDependency</string>
+					<string>27.CustomClassName</string>
+					<string>27.IBPluginDependency</string>
 					<string>4.CustomClassName</string>
 					<string>4.IBPluginDependency</string>
 				</object>
@@ -327,8 +382,6 @@
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>HomeStreamController</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<string>ExploreViewController</string>
-					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<object class="NSMutableDictionary">
 						<bool key="EncodedWithXMLCoder">YES</bool>
@@ -338,6 +391,10 @@
 					<string>{{520, 376}, {320, 480}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<integer value="1"/>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>ExploreViewController</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>SubjotAppDelegate_iPhone</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -355,7 +412,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">22</int>
+			<int key="maxID">29</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
